# polars-ese

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Justfile  README.md  demo.py  demo_peps.py  demo_peps_scored.py  pyproject.toml
.just/: bench.just  ship.just
benchmark/: bench.py  dataset.py  dataset_gooaq.py  download_gooaq.py  download_gooaq.sh  gooaq.py  gooaq_simple.py  run.py
benchmark/benchmark_data/gooaq_sweep/: batch_1.tsv  batch_1000.tsv  batch_10000.tsv  batch_16.tsv  batch_256.tsv  batch_64.tsv  len_10.tsv  len_100.tsv  len_1000.tsv  len_2000.tsv  len_250.tsv  len_50.tsv  len_500.tsv
benchmark/rust/: Cargo.toml
benchmark/rust/src/: bench_ese.rs  bench_ese_gooaq.rs
python/polars_ese/: __init__.py
src/: lib.rs
