[[bin]]
name = "bench_ese"
path = "src/bench_ese.rs"

[[bin]]
name = "bench_ese_gooaq"
path = "src/bench_ese_gooaq.rs"

[dependencies]
ese = {path = "../../../ese", features = ["rayon", "dim-512", "quant-8"]}

[package]
name = "bench_ese"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
